--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,13 @@ include(GNUInstallDirs)
 find_package(Lua REQUIRED)
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(SYSTEMD libsystemd>=236)
+pkg_check_modules(MXML mxml)
 
 set(LSDBUS_SRC_DIR ${CMAKE_SOURCE_DIR}/src/)
 
 set(LSDBUS_SRCS
   ${LSDBUS_SRC_DIR}/lsdbus.c
+  ${LSDBUS_SRC_DIR}/introspect.c
 )
 
 set(LSDBUS_INST_DIR
@@ -21,7 +23,7 @@ set(LSDBUS_INST_DIR
 add_library(lsdbus SHARED ${LSDBUS_SRCS})
 target_compile_options(lsdbus PRIVATE -Wall -Wextra)
 target_include_directories(lsdbus PRIVATE ${LUA_INCLUDE_DIR})
-target_link_libraries(lsdbus ${LUA_LIBRARIES} ${SYSTEMD_LIBRARIES} )
+target_link_libraries(lsdbus ${LUA_LIBRARIES} ${SYSTEMD_LIBRARIES} ${MXML_LIBRARIES} )
 set_target_properties(lsdbus PROPERTIES PREFIX "")
 install(TARGETS lsdbus LIBRARY DESTINATION ${LSDBUS_INST_DIR})
 
