--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ set(LSDBUS_SRCS
   ${LSDBUS_SRC_DIR}/message.c
   ${LSDBUS_SRC_DIR}/introspect.c
   ${LSDBUS_SRC_DIR}/evl.c
+  ${LSDBUS_SRC_DIR}/vtab.c
 )
 
 set(LSDBUS_INST_DIR
