cmake: add support for luajit
Signed-off-by: Markus Klotzbuecher <mk@mkio.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,40 +1,42 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.16)
 
 project(sdbus-lua VERSION 0.0.1 LANGUAGES C)
 set(CMAKE_C_STANDARD 11)
 
 include(GNUInstallDirs)
 
-find_package(Lua REQUIRED)
 find_package(PkgConfig REQUIRED)
+pkg_search_module(LUA lua5.4 lua5.3 luajit lua5.2 lua5.1 REQUIRED)
+
+message(STATUS "Found ${LUA_MODULE_NAME}")
+
 pkg_check_modules(SYSTEMD libsystemd>=242)
 pkg_check_modules(MXML REQUIRED mxml)
 
-if(${LUA_VERSION_STRING} VERSION_LESS "5.3")
-  find_file(COMPAT53 compat-5.3.h PATHS ${LUA_INCLUDE_DIR} NO_DEFAULT_PATH)
+if ("${LUA_MODULE_NAME}" STREQUAL "luajit")
+  set(LUA_VER "5.1")
+else()
+  pkg_get_variable(LUA_VER ${LUA_MODULE_NAME} major_version)
+endif()
+
+if( "${LUA_VER}" STREQUAL "5.1" OR "${LUA_VER}" STREQUAL "5.2" )
+  find_file(COMPAT53 compat-5.3.h PATH_SUFFIXES "lua${LUA_VER}")
+
   if(NOT COMPAT53)
-    message(FATAL_ERROR "missing compat-5.3.h in ${LUA_INCLUDE_DIR}, please install lua-compat53-dev")
+    message(FATAL_ERROR "failed to find compat-5.3.h for lua${LUA_VER}, please install lua-compat53-dev")
   else()
     message(STATUS "lua-compat53 found")
   endif()
 endif()
 
-set(LSDBUS_SRC_DIR ${CMAKE_SOURCE_DIR}/src/)
-
-set(LSDBUS_SRCS
-  ${LSDBUS_SRC_DIR}/lsdbus.c
-  ${LSDBUS_SRC_DIR}/message.c
-  ${LSDBUS_SRC_DIR}/introspect.c
-  ${LSDBUS_SRC_DIR}/evl.c
-  ${LSDBUS_SRC_DIR}/vtab.c
-)
+set(LSDBUS_SRCS src/lsdbus.c src/message.c src/introspect.c src/evl.c src/vtab.c)
 
 set(LSDBUS_INST_DIR
-  ${CMAKE_INSTALL_PREFIX}/lib/lua/${LUA_VERSION_MAJOR}.${LUA_VERSION_MINOR}/lsdbus/)
+  ${CMAKE_INSTALL_PREFIX}/lib/lua/${LUA_VER}/lsdbus/)
 
 add_library(core SHARED ${LSDBUS_SRCS})
 target_compile_options(core PRIVATE -Wall -Wextra)
-target_include_directories(core PRIVATE ${LUA_INCLUDE_DIR})
+target_include_directories(core PRIVATE ${LUA_INCLUDE_DIRS})
 target_link_libraries(core ${LUA_LIBRARIES} ${SYSTEMD_LIBRARIES} ${MXML_LIBRARIES} )
 set_target_properties(core PROPERTIES PREFIX "")
 install(TARGETS core LIBRARY DESTINATION ${LSDBUS_INST_DIR})
@@ -45,5 +47,5 @@ install(FILES
   lua/server.lua
   lua/common.lua
   lua/error.lua
-  DESTINATION ${CMAKE_INSTALL_PREFIX}/share/lua/${LUA_VERSION_MAJOR}.${LUA_VERSION_MINOR}/lsdbus/
+  DESTINATION ${CMAKE_INSTALL_PREFIX}/share/lua/${LUA_VER}/lsdbus/
   )
