make: support meta-oe Lua pc file
Signed-off-by: Markus Klotzbuecher <mk@mkio.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_C_STANDARD 11)
 include(GNUInstallDirs)
 
 find_package(PkgConfig REQUIRED)
-pkg_search_module(LUA lua5.4 lua5.3 luajit lua5.2 lua5.1 REQUIRED)
+pkg_search_module(LUA lua5.4 lua5.3 luajit lua5.2 lua5.1 lua REQUIRED)
 
 message(STATUS "Found ${LUA_MODULE_NAME}")
 
@@ -14,9 +14,11 @@ pkg_check_modules(SYSTEMD libsystemd>=242)
 pkg_check_modules(MXML REQUIRED mxml)
 
 if ("${LUA_MODULE_NAME}" STREQUAL "luajit")
-  set(LUA_VER "5.1")
+  pkg_get_variable(LUA_VER ${LUA_MODULE_NAME} abiver)
 else()
-  pkg_get_variable(LUA_VER ${LUA_MODULE_NAME} major_version)
+  # remove minor version (meta-oe pc file has no major_version)
+  pkg_get_variable(LUA_VER ${LUA_MODULE_NAME} version)
+  string(REGEX MATCH "^([0-9]+\\.[0-9]+)" LUA_VER ${LUA_VERSION})
 endif()
 
 if( "${LUA_VER}" STREQUAL "5.1" OR "${LUA_VER}" STREQUAL "5.2" )
