tools: add lsdb-call, lsdb-mon and lsdb-emit
Signed-off-by: Markus Klotzbuecher <mk@mkio.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,3 +51,9 @@ install(FILES
   lua/error.lua
   DESTINATION ${CMAKE_INSTALL_PREFIX}/share/lua/${LUA_VER}/lsdbus/
   )
+
+install(PROGRAMS
+  tools/lsdb-mon
+  tools/lsdb-call
+  tools/lsdb-emit
+  DESTINATION ${CMAKE_INSTALL_BINDIR})
