tools: add lsdb-info
Signed-off-by: Markus Klotzbuecher <mk@mkio.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,4 +63,5 @@ install(PROGRAMS
   tools/lsdb-mon
   tools/lsdb-call
   tools/lsdb-emit
+  tools/lsdb-info
   DESTINATION ${CMAKE_INSTALL_BINDIR})
