--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,8 @@ build:
   script:
     - echo "building for with $LUA_VERSION"
     - mkdir build-$LUA_VERSION && cd build-$LUA_VERSION && cmake -DCONFIG_LUA_VER=$LUA_VERSION .. && make && make install && cd ..
+    - lua$LUA_VERSION -v -l lsdbus -e "print[[PASS]]"
   parallel:
     matrix:
       - LUA_VERSION: ['5.1', '5.2', '5.3', '5.4', 'jit']
+
